--- a/ProceresRA/version2/backend/.env
+++ b/ProceresRA/version2/backend/.env
@@ -1,5 +1,5 @@
 # Conexión MongoDB Atlas
-MONGODB_URI=mongodb+srv://rhfm1963uneti:ZH4kuH4EM1ueBNvx@rhfm63.8rb9i.mongodb.net/ar-db?retryWrites=true&w=majority&appName=RHFM63
+MONGODB_URI=mongodb+srv://<user>:<password>@rhfm63.8rb9i.mongodb.net/ar-db?retryWrites=true&w=majority&appName=RHFM63
 # Autenticacion
 JWT_SECRET=tu_jwt_secreto
 REFRESH_TOKEN_SECRET=tu_refresh_secreto
